feat: customer table removed, roles managed just by user.role
