# server/internal/models/customer.go
@@ -1,12 +1,0 @@
-package models
-
-import "time"
-
-type Customer struct {
-	ID        uint      `gorm:"primaryKey" json:"id"`
-	UserID    uint      `gorm:"index" json:"user_id"`
-	User      User      `gorm:"foreignKey:UserID" json:"-"`
-	IsActive  bool      `json:"is_active" gorm:"default:true"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
-}
